# XTP.GO

./: .gitignore  LICENSE  README.md
C_porting_XTP/: .gitignore  gen_cgo_code.py
C_porting_XTP/include/XTP/: xquote_api_struct.h
C_porting_XTP/others/: CMakeLists.txt
C_porting_XTP/pyfiles/: defines.py  gen_cgo_code.py  modules.py  utils.py
C_porting_XTP/src/: .gitignore
C_porting_XTP/src/Platform/: CMakeLists.txt
cmake/: boost_common.cmake  common.cmake  xtp.cmake
devenv/: .gitignore  Makefile  Vagrantfile  gcc8.sh  golang_setup.sh  install_cmake.sh  install_py37.sh  redis_setup.sh  setup.sh  zmq_setup.sh
go_src/: .gitignore  Makefile  build.cmd  go.mod  go.sum  main.go  main.go.bak  preinstall.cmd
go_src/defs/: ds_defs.go
go_src/lctp/: .gitignore  main.go
go_src/lctp/static/js/: login_action.js
go_src/lctp/views/: index.html  main.html
go_src/queue/: init.go  lfqueue.go  lfqueue_test.go  xtp_message.go
go_src/strategies/: init.go  strategy_base.go
go_src/xtp_wrapper/: event_handler.go  init.go  utils.go  xtp_convert_util.go  xtp_quote_api.go  xtp_quote_spi.go  xtp_trader_api.go  xtp_trader_spi.go
scripts/: start.sh  start.sh.sample
vs_build/: platform_build.bat
