CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(LTP_C C CXX)

SET(CMAKES_ROOT ${PROJECT_SOURCE_DIR}/../..)

SET(THIRD_PARTY_ROOT ${PROJECT_SOURCE_DIR}/../../../ThirdParty)

include (${CMAKES_ROOT}/../cmake/common.cmake)

include (${CMAKES_ROOT}/../cmake/boost_common.cmake)

include (${CMAKES_ROOT}/../cmake/xtp.cmake)

SET(BIN_PATH ${CMAKES_ROOT}/bin)

SET(ZMQ_VER 3.2.5)
SET(ZMQ_H_BASE ${THIRD_PARTY_HEADER_BASE}/ZMQ/${ZMQ_VER})

SET(PROTOBUF_VER 2.5.0)
SET(PROTOBUF_H_BASE ${THIRD_PARTY_HEADER_BASE}/PROTOBUF/${PROTOBUF_VER})

SET(XTP_CAPI_H_BASE ${HEADER_BASE}/CXTPApi)
SET(XTP_CAPI_LIB_BASE ${LIB_BASE}/CXTPApi)

if (WIN32)

SET(ZMQ_LIB_BASE ${THIRD_PARTY_LIB_BASE}/ZMQ/${ZMQ_VER}/Win32)

SET(PROTOBUF_LIB_BASE ${THIRD_PARTY_LIB_BASE}/PROTOBUF/${PROTOBUF_VER}/Win32)

SET(PTHREAD_H_BASE ${THIRD_PARTY_HEADER_BASE}/pthread-W32)
SET(PTHREAD_LIB_BASE ${THIRD_PARTY_LIB_BASE}/pthread-W32)

SET(LIBEVENT_BASE "L:/libevent-2.0.22-stable")
SET(LIBEVENT_BASE_H ${LIBEVENT_BASE}/include)
SET(LIBEVENT_BASE_H_W32 ${LIBEVENT_BASE}/WIN32-Code)

SET(TBB_H_PATH ${THIRD_PARTY_HEADER_BASE}/TBB)
SET(TBB_LIB_PATH ${THIRD_PARTY_LIB_BASE}/TBB/win32)

#SET(PDCURSES_H_BASE ${THIRD_PARTY_HEADER_BASE}/PDCurses)
#SET(PDCURSES_LIB_BASE ${THIRD_PARTY_LIB_BASE}/PDCurses/win32)

SET(VLD_VER 2.4rc2)
SET(VLD_H_BASE ${THIRD_PARTY_HEADER_BASE}/vld/${VLD_VER})
SET(VLD_LIB_BASE ${THIRD_PARTY_LIB_BASE}/vld/${VLD_VER}/Win32)

else(WIN32)
endif(WIN32)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

INCLUDE_DIRECTORIES (
	${COMMON_HEADER_BASE}
	${UTILS_H_BASE}
	${TBB_H_PATH}
)

LINK_DIRECTORIES (
	${UTILS_LIB_BASE}
	${TBB_LIB_PATH}
)

ADD_SUBDIRECTORY(CXTPApiImpl)
